test/subjects/errors/bad_arrays_read2.php
<?php
	$x[][]; // { phc-error: Cannot use [] for reading }
?>
